fix embed scrollbar (#622)

--- a/src/app/widgets/widget-iframe/widget-iframe.component.scss
+++ b/src/app/widgets/widget-iframe/widget-iframe.component.scss
@@ -1,6 +1,8 @@
 .widgetIframe {
   background-color: white;
+  border-radius: var(--mdc-elevated-card-container-shape, var(--mat-sys-corner-medium));
 }
+
 .widgetOverlay {
   position: absolute;
   width: 100%;
